--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,17 +49,21 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: 5.4.0
-  build_runner: 2.4.4
+  build_runner: 2.4.6
   json_serializable: 6.6.1
   injectable_generator: 1.5.5
   go_router_builder: 2.0.0
   freezed: 2.3.2
+  retrofit_generator: 7.0.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+dependency_overrides:
+  logging: 1.1.1
 
 flutter_intl:
   enabled: true
