--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: 4.8.0
   get_it: 7.2.0
   rxdart: 0.27.7
+  provider: 6.0.5
+  contextual_logging: 1.0.2+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
